--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
+alembic==1.7.3
 click==8.0.1
 colorama==0.4.4
 Flask==2.0.1
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
+greenlet==1.1.1
+importlib-resources==5.2.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
+Mako==1.1.5
 MarkupSafe==2.0.1
+psycopg2==2.9.1
 python-dotenv==0.19.0
+SQLAlchemy==1.4.25
 Werkzeug==2.0.1
 WTForms==2.3.3
+zipp==3.5.1
