--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 alembic==1.7.3
+beautifulsoup4==4.10.0
+certifi==2021.5.30
+charset-normalizer==2.0.6
 click==8.0.1
 colorama==0.4.4
 dnspython==2.1.0
@@ -19,8 +22,11 @@ Mako==1.1.5
 MarkupSafe==2.0.1
 psycopg2==2.9.1
 python-dotenv==0.19.0
+requests==2.26.0
 six==1.16.0
+soupsieve==2.2.1
 SQLAlchemy==1.4.25
+urllib3==1.26.7
 Werkzeug==2.0.1
 WTForms==2.3.3
 zipp==3.5.1
