simple stripe integration

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ requests==2.26.0
 six==1.16.0
 soupsieve==2.2.1
 SQLAlchemy==1.4.25
+stripe==2.61.0
 urllib3==1.26.7
 Werkzeug==2.0.1
 WTForms==2.3.3
